fix: radio button animation border on mobile

--- a/src/components/views/orders/Checkout.css
+++ b/src/components/views/orders/Checkout.css
@@ -86,6 +86,7 @@
 
 .Detail .radio-group {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .Detail .pay-method-radio {
@@ -109,7 +110,6 @@
   margin-right: 0.5rem;
   outline: none;
   position: relative;
-  z-index: 1000;
 }
 .Detail .pay-method-radio:hover {
   background: #9faab7;
@@ -141,6 +141,8 @@
 }
 .Detail .pay-method-radio {
   border-radius: 50%;
+  outline: none !important;
+  border: none !important;
 }
 .Detail .pay-method-radio::after {
   border-radius: 50%;
